# score-vfx-meshloader

./: CMakeLists.txt  README.md  addon.json  release.sh  score_addon_meshloader.cpp  score_addon_meshloader.hpp
meshloader/: Executor.cpp  Executor.hpp  Layer.hpp  Metadata.hpp  Node.cpp  Node.hpp  Process.cpp  Process.hpp
